tmp/k8s-service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-service-clusterip
  labels:
    app: httpbin
    component: service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: httpbin
