tmp/k8s-service-nodeport.yml

apiVersion: v1
kind: Service
metadata:
  name: httpbin-service-nodeport
  labels:
    app: httpbin
    component: service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30000  # You can specify a port in the range 30000-32767, or let Kubernetes assign one automatically
  selector:
    app: httpbin
